--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -67,9 +67,9 @@
 <button mat-raised-button color="warn" [routerLink]="['/products']" type="button" (click)="cancel()">Quay về</button>
 <button mat-raised-button color="primary" type="button" (click)="printReceiptHTML()" [disabled]="!orderForm.value.close">In receipt</button>
 </form> 
-<!--
+
 <br>Dirty: {{ orderForm.dirty }}
 <br>Touched: {{ orderForm.touched }}
 <br>Valid: {{ orderForm.valid }}
 <br>Value: {{ orderForm.value | json }}
-<br>Street: {{ orderForm.get('0.street1')?.value }}-->
+<br>Street: {{ orderForm.get('0.street1')?.value }}
