--- a/src/app/inside/orders/orders-list/orders-list.component.html
+++ b/src/app/inside/orders/orders-list/orders-list.component.html
@@ -13,10 +13,25 @@
          <td mat-cell *matCellDef="let element"> {{element.table}} </td>
        </ng-container>
 
+       <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Date</th>
+        <td mat-cell *matCellDef="let element"> {{getDateString(element.createdDate)}} </td>
+      </ng-container>
+
        <ng-container matColumnDef="total">
          <th mat-header-cell *matHeaderCellDef> total </th>
          <td mat-cell *matCellDef="let element"> {{element.total}} </td>
        </ng-container>
+
+       <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let element"> {{parseState(element.close)}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="detail">
+          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <td mat-cell *matCellDef="let element"> {{parseItems(element.items)}} </td>
+        </ng-container>
 
        <ng-container matColumnDef="items">
          <th mat-header-cell *matHeaderCellDef> product </th>
