categorize menu items

--- a/src/app/inside/orders/order-edit/order-edit.component.css
+++ b/src/app/inside/orders/order-edit/order-edit.component.css
@@ -27,3 +27,23 @@
   .itemrow {
     margin: 5px;
   }
+
+  .mat-button-toggle{
+    background-color:white;
+    height: 20px;
+    color: black;
+    padding: 0 !important;
+  }
+
+.mat-button-toggle-label-content{
+    line-height: 0px !important;
+  }
+
+  .mat-button-toggle-checked{
+    background-color:#3f51b5;
+    color: gold;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+ 
