--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/Indigo-pink.css';
+
+.mat-button-toggle-label-content{
+    line-height: 0px !important;
+  }
