--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -1,4 +1,4 @@
-<form class="order-form" [formGroup]="orderForm" (ngSubmit)="onSubmit()">  
+<form class="order-form" [formGroup]="orderForm" (ngSubmit)="onSubmit()" autocomplete="off">  
   <mat-form-field class="order-full-width" appearance="outline">
     <mat-label>Order ID</mat-label>
     <input matInput placeholder="" formControlName="createdDate" type="text">
@@ -13,11 +13,12 @@
 </mat-form-field>
    <div formArrayName="items" *ngFor="let item of items.controls, let i=index">
       <div [formGroupName]="i" class="itemrow">
-          <mat-radio-group formControlName="cat">
-              <mat-radio-button  value="beer">beer</mat-radio-button>&nbsp;&nbsp;
-              <mat-radio-button  value="others">others</mat-radio-button>&nbsp;&nbsp;
-              <mat-radio-button   value="outside">outside</mat-radio-button>&nbsp;&nbsp;
-            </mat-radio-group><p></p>
+          <mat-button-toggle-group appearance="legacy" class="menuToggle" formControlName="cat" (click)="categorizeProducts(i, this)" value="beer"> 
+              <mat-button-toggle  value="beer">beer</mat-button-toggle>&nbsp;&nbsp;
+              <mat-button-toggle  value="others">others</mat-button-toggle>&nbsp;&nbsp;
+              <mat-button-toggle   value="outside">outside menu</mat-button-toggle>&nbsp;&nbsp;
+            </mat-button-toggle-group>
+            <mat-divider inset="false"></mat-divider>
       <mat-form-field class="order-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
         <input type="text" matInput placeholder="" formControlName="product" [matAutocomplete]="auto">
