starting inventory feature

--- a/src/app/inside/menu-bar/menu-bar.component.html
+++ b/src/app/inside/menu-bar/menu-bar.component.html
@@ -4,6 +4,7 @@
           <!--<mat-button-toggle [routerLink]="['/inside/products']">Products</mat-button-toggle>-->
           <mat-button-toggle [routerLink]="['/inside/orders']">Orders</mat-button-toggle>
           <mat-button-toggle [routerLink]="['/inside/report']">Report</mat-button-toggle>
+          <mat-button-toggle [routerLink]="['/inside/report/wh']">Inventory</mat-button-toggle>
           <!--<mat-button-toggle [routerLink]="['/']" >Home</mat-button-toggle>-->
         </mat-button-toggle-group>
   </mat-toolbar-row>
