--- a/src/app/inside/report/sale/sale.component.css
+++ b/src/app/inside/report/sale/sale.component.css
@@ -1,6 +1,6 @@
 .report-form {
     min-width: 150px;
-    max-width: 600px;
+    max-width: 1200px;
     width: 100%;    
   }
 
@@ -27,3 +27,7 @@
   .itemrow {
     margin: 5px;
   }
+
+  table.mat-table {
+    border-spacing: 10px;
+}
