add report serice for IPA

--- a/src/app/inside/report/warehouse/warehouse.component.html
+++ b/src/app/inside/report/warehouse/warehouse.component.html
@@ -1,3 +1,11 @@
 <p>
-  warehouse works!
+ 
+
+  Số lượng IPA đã bán = {{IPACount}}
+  <Br> trong tổng số {{orderCount}} order 
+<br>
+  Trong đó:<Br> 
+  Chai lẻ {{IPA}} <br>
+  Gói 6 {{IPAPack6}} <br>
+  Gói 10 {{IPAPack10}} <br>
 </p>
