update product module

--- a/src/app/inside/menu-bar/menu-bar.component.html
+++ b/src/app/inside/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
       <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-          <!--<mat-button-toggle [routerLink]="['/inside/products']">Products</mat-button-toggle>-->
+          <mat-button-toggle [routerLink]="['/inside/products']">Products</mat-button-toggle>
           <mat-button-toggle [routerLink]="['/inside/orders']">Orders</mat-button-toggle>
           <mat-button-toggle [routerLink]="['/inside/report']">Report</mat-button-toggle>
           <mat-button-toggle [routerLink]="['/inside/report/wh']">Inventory</mat-button-toggle>
