--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,6 +1,11 @@
    
   
    <p><a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a></p>
+
+   <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+  
      <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8">
        <!-- ProductName Column -->
         <ng-container matColumnDef="productName">
