--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -5,7 +5,7 @@
    <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
-  
+
      <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8">
        <!-- ProductName Column -->
         <ng-container matColumnDef="productName">
@@ -32,6 +32,10 @@
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef> {{productTexts.price}} </th>
           <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        </ng-container>
+        <ng-container matColumnDef="cost">
+          <th mat-header-cell *matHeaderCellDef> Cost </th>
+          <td mat-cell *matCellDef="let element"> {{element.cost}} </td>
         </ng-container>
 
         <ng-container matColumnDef="description">
