--- a/src/app/inside/products/product-edit/product-edit.component.html
+++ b/src/app/inside/products/product-edit/product-edit.component.html
@@ -6,8 +6,12 @@
   </mat-form-field>
   <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>{{productTexts.productCode}}</mat-label>
-    <input matInput  formControlName="productCode">
+    <input matInput type="text" formControlName="productCode" [matAutocomplete]="auto">
   </mat-form-field>
+  <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let c of productIDs" [value]="c">{{c}}</mat-option>
+  </mat-autocomplete>
+
   <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>{{productTexts.category}}</mat-label>
       <mat-select formControlName="category">
