--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,6 +1,12 @@
    
   
-   <p><a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a></p>
+   <p><a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a> 
+    &nbsp; &nbsp;
+    <a mat-flat-button color="warn" [routerLink]="['/inside/products/stock']">Post Goods Receipt</a></p>
+
+   <hr>
+
+   <p><a mat-stroked-button color="primary" (click)="showProducts()" >Show all products</a></p>
 
    <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
@@ -81,6 +87,13 @@
           <th mat-header-cell *matHeaderCellDef> {{productTexts.inventory}} </th>
           <td mat-cell *matCellDef="let element"> {{element.inventory}} </td>
         </ng-container>
+        <ng-container matColumnDef="sold">
+          <th mat-header-cell *matHeaderCellDef> Đã bán </th>
+          <td mat-cell *matCellDef="let element">  
+            <a mat-stroked-button color="primary" [routerLink]="['/inside/products', element.productCode]">{{element.sold}}</a>
+          </td>
+        </ng-container>
+        
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
