changing data structure

--- a/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
+++ b/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
@@ -1,3 +1,5 @@
 <p>
   goodsreceipt works!
+  <button (click)="mergeProduct()">Merge product</button>
+  <Button (click)="mergeOrder()">Merge order</Button>
 </p>
