--- a/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
+++ b/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
@@ -2,4 +2,6 @@
   goodsreceipt works!
   <button (click)="mergeProduct()">Merge product</button>
   <Button (click)="mergeOrder()">Merge order</Button>
+
+  <Button (click)="move()">move data</Button>
 </p>
