update order date time

--- a/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
+++ b/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
@@ -4,4 +4,6 @@
   <Button (click)="mergeOrder()">Merge order</Button>
 
   <Button (click)="move()">move data</Button>
+
+  <button (click)="fixData()">Fix</button>
 </p>
