--- a/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
+++ b/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
@@ -6,4 +6,6 @@
   <Button (click)="move()">move data</Button>
 
   <button (click)="fixData()">Fix</button>
+
+  <button (click)="updateDocName()">Update Doc name</button>
 </p>
