--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -2,7 +2,8 @@
   
    <p><a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a> 
     &nbsp; &nbsp;
-    <a mat-flat-button color="warn" [routerLink]="['/inside/products/stock']">Post Goods Receipt</a></p>
+   <!--<a mat-flat-button color="warn" [routerLink]="['/inside/products/stock']">Post Goods Receipt</a>-->
+    </p>
 
    <hr>
 
