--- a/src/app/inside/products/post-goods/post-goods.component.html
+++ b/src/app/inside/products/post-goods/post-goods.component.html
@@ -1,3 +1,64 @@
-<p>
-  post-goods works!
+<form class="order-form" [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">  
+
+    <mat-form-field class="order-full-width" appearance="outline">
+        <mat-label>Tổng bill nhập</mat-label>
+        <input matInput placeholder="" formControlName="total" value="{{total}}" type="number" >
+      </mat-form-field> &nbsp;&nbsp;&nbsp;
+
+      <mat-form-field class="report-onethird-width">
+          <input matInput [matDatepicker]="fromPicker" placeholder="Ngày nhập" formControlName="postDate">
+          <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+          <mat-datepicker #fromPicker></mat-datepicker>
+        </mat-form-field>&nbsp;&nbsp;&nbsp;
+
+        <mat-form-field class="order-full-width" appearance="outline">
+            <mat-label>Người nhập</mat-label>
+            <input matInput placeholder="" formControlName="postBy" value="{{total}}" type="text" >
+          </mat-form-field>&nbsp;&nbsp;&nbsp;
+  <h4>Chi tiết đơn hàng nhập</h4>
+  <div formArrayName="items" *ngFor="let item of items.controls, let i=index" class="itemsForm">
+      <div [formGroupName]="i" class="itemrow">
+          <mat-button-toggle-group appearance="legacy" class="menuToggle" formControlName="cat" (click)="categorizeProducts(i, this)" value="beer"> 
+              <mat-button-toggle  value="beer">beer</mat-button-toggle>&nbsp;&nbsp;
+              <mat-button-toggle  value="others">others</mat-button-toggle>&nbsp;&nbsp;
+              <mat-button-toggle   value="outside">outside menu</mat-button-toggle>&nbsp;&nbsp;
+            </mat-button-toggle-group>
+            <mat-divider inset="false"></mat-divider>
+      <mat-form-field class="order-50-width" appearance="outline">
+        <mat-label>Bia</mat-label>
+        <input type="text" matInput placeholder="" formControlName="product" [matAutocomplete]="auto">
+        <button mat-button  matSuffix mat-icon-button aria-label="Clear" (click)="resetItem($event, i)">
+            <mat-icon>close</mat-icon>
+          </button>
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductFn" >
+          <mat-option *ngFor="let option of (filteredProducts[i] | async) " [value]="option" >
+            {{option.productName}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+      <mat-form-field class="order-25-width" appearance="outline">
+          <mat-label>Số lượng</mat-label>
+          <input matInput placeholder="" formControlName="quantity" type="number">
+        </mat-form-field>
+      <mat-form-field class="order-25-width" appearance="outline">
+          <mat-label>Giá</mat-label>
+          <input matInput placeholder="" formControlName="price" type="number">
+        </mat-form-field>
+        
+          &nbsp;<button  color="basic" (click)="removeItem(i)" type="button"><i class="material-icons">
+            clear
+            </i></button>
+          
+      </div>      
+    </div>     
+    <button mat-raised-button color="primary" (click)="addItem()" type="button"><i class="material-icons">
+      add
+      </i></button>
+      <hr />  
+    
+<br><p>
+
 </p>
+<button mat-raised-button color="primary" type="submit" >Save</button>
+<button mat-raised-button color="warn" [routerLink]="['/products']" type="button" (click)="cancel()">Cancel</button>
+</form> 
