--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -3,6 +3,7 @@
    <p><a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a> 
     &nbsp; &nbsp;
    <!--<a mat-flat-button color="warn" [routerLink]="['/inside/products/stock']">Post Goods Receipt</a>-->
+   <a mat-flat-button color="warn" [routerLink]="['/inside/products/goods/post']">Post Goods Receipt</a>
     </p>
 
    <hr>
