--- a/src/app/inside/products/post-goods/post-goods.component.html
+++ b/src/app/inside/products/post-goods/post-goods.component.html
@@ -6,7 +6,7 @@
       </mat-form-field> &nbsp;&nbsp;&nbsp;
 
       <mat-form-field class="input-full-width">
-          <input matInput [matDatepicker]="fromPicker" placeholder="Ngày nhập" formControlName="postDate">
+          <input matInput [matDatepicker]="fromPicker" placeholder="Ngày nhập" formControlName="postDate" >
           <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
           <mat-datepicker #fromPicker></mat-datepicker>
         </mat-form-field>&nbsp;&nbsp;&nbsp;
@@ -28,7 +28,7 @@
       <mat-form-field class="input-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
         <input type="text" matInput placeholder="" formControlName="product" [matAutocomplete]="auto">
-        <button mat-button  matSuffix mat-icon-button aria-label="Clear" (click)="resetItem($event, i)">
+        <button mat-button  matSuffix mat-icon-button aria-label="Clear" >
             <mat-icon>close</mat-icon>
           </button>
         <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductFn" >
