--- a/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
+++ b/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
@@ -1,11 +1,29 @@
-<p>
-  goodsreceipt works!
-  <button (click)="mergeProduct()">Merge product</button>
-  <Button (click)="mergeOrder()">Merge order</Button>
+   
+  <p center><a mat-flat-button color="warn" [routerLink]="['/inside/products']">Inventory</a></p>
+  
+  <h3>Goods posts</h3>
+ 
+  <table mat-table [dataSource]="dataSource" class="order-form mat-elevation-z8">
+    <!-- ProductName Column -->
+     <ng-container matColumnDef="postDate">
+       <th mat-header-cell *matHeaderCellDef>Ngày nhập </th>
+       <td mat-cell *matCellDef="let element">
+         <a [routerLink] = "['', 'inside', 'products', element.createdDate, 'goods', 'post']">{{element.postDate}}</a></td>
+     </ng-container>          
+     
+     <ng-container matColumnDef="postBy">
+       <th mat-header-cell *matHeaderCellDef> Người nhập</th>
+       <td mat-cell *matCellDef="let element"> {{element.postBy}} </td>
+     </ng-container>
 
-  <Button (click)="move()">move data</Button>
+     <ng-container matColumnDef="total">
+       <th mat-header-cell *matHeaderCellDef> Tổng đơn hàng </th>
+       <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+     </ng-container>
 
-  <button (click)="fixData()">Fix</button>
 
-  <button (click)="updateDocName()">Update Doc name</button>
-</p>
+     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+     
+   </table>
+   <mat-paginator [pageSizeOptions]="[20, 5, 10]" showFirstLastButtons></mat-paginator>
