--- a/src/app/inside/products/post-goods/post-goods.component.html
+++ b/src/app/inside/products/post-goods/post-goods.component.html
@@ -61,5 +61,5 @@
 
 </p>
 <button mat-raised-button color="primary" type="submit" >Save</button>
-<button mat-raised-button color="warn" [routerLink]="['/products']" type="button" (click)="cancel()">Cancel</button>
+<button mat-raised-button color="warn"  type="button" (click)="cancel()">Cancel</button>
 </form> 
